--- a/config/itlt-client.toml
+++ b/config/itlt-client.toml
@@ -329,7 +329,7 @@
 		# The name of your modpack.
 		# If blank, the modpack name will be auto-detected from supported launchers.
 		# This auto-detection isn't perfect, so you can override it here if needed.
-		modpackName = "EMC & FE ++ v1.0.0-alpha.1"
+		modpackName = "EMC & FE ++ 1.0.0-alpha.3"
 
 	[Display.WindowTitle]
 		# 
